--- a/assets/scss/language-switch.scss
+++ b/assets/scss/language-switch.scss
@@ -1,6 +1,6 @@
 @use 'govuk-frontend' as *;
-@use "sass:map";
-@use "sass:math";
+@use 'sass:map';
+@use 'sass:math';
 
 .l-i18n-language-switch {
   float: right;
@@ -27,8 +27,8 @@
 
     &:after {
       margin-right: math.div($govuk-gutter-half, 2);
-            margin-left: math.div($govuk-gutter-half, 2);
-            border-left: 1px solid map.get($govuk-colours, 'black');
+      margin-left: math.div($govuk-gutter-half, 2);
+      border-left: 1px solid map.get($govuk-colours, 'black');
       content: '';
     }
 
